[package]
name = "tweet"
version = "0.1.0"
authors = ["fiveseven-lambda <fiveseven.lambda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
hmac-sha1 = "0.1.3"
percent-encoding = "2.1.0"
rand = "0.7.3"
reqwest = "0.10.8"
tokio = { version = "0.2.22", features = ["macros"] }
